nixidy/generated/prod/ha/Deployment-ha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: ha
    app.kubernetes.io/instance: ha
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ha
  name: ha
  namespace: home
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: ha
      app.kubernetes.io/instance: ha
      app.kubernetes.io/name: ha
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 2f13cc9cb7956d0c3b8e780842715336cd875f1bc9c0fb02cddebbdff65280e2
      labels:
        app.kubernetes.io/controller: ha
        app.kubernetes.io/instance: ha
        app.kubernetes.io/name: ha
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - secretRef:
                name: ha
          image: harbor.trdos.me/library/ha:2026.4.1@sha256:8a69d7d6073e6c67b250e0e74879c6d102ecf4dd2c3c329feb991edbf754e275
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          name: ha
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8123
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config/configuration.yaml
              name: base-config
              subPath: configuration.yaml
            - mountPath: /config
              name: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: ha
      volumes:
        - configMap:
            name: ha
          name: base-config
        - name: config
          persistentVolumeClaim:
            claimName: ha
