nixidy/generated/prod/ha/HTTPRoute-ha.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha
  namespace: home
spec:
  hostnames:
    - hass.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: ha
          port: 8123
